--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
-
 version: '3'
 services:
   sveltekit:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     command: sh -c "yarn install && yarn dev --host"
     ports:
-      - "5173:5173"
+      - '5173:5173'
     volumes:
       - ./:/app
       - node_modules:/app/node_modules
