--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-node": "^4.0.1",
-		"lucide-svelte": "^0.330.0"
+		"lucide-svelte": "^0.330.0",
+		"nodemailer": "^6.9.11"
 	}
 }
