--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       - ./:/app
       - node_modules:/app/node_modules
+    env_file:
+      - .env.local
 
 volumes:
   node_modules:
