--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.1.1",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/nodemailer": "^6.4.15",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.15",
@@ -39,6 +40,6 @@
 	"dependencies": {
 		"@sveltejs/adapter-node": "^4.0.1",
 		"lucide-svelte": "^0.330.0",
-		"nodemailer": "^6.9.11"
+		"nodemailer": "^6.9.14"
 	}
 }
