--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,9 @@
-FROM node:18-alpine3.14
+FROM node:20-alpine
+
+RUN corepack enable && corepack prepare yarn && yarn -v
+
+COPY package.json yarn.lock .yarnrc.yml ./
+RUN yarn install --immutable
 
 WORKDIR /app
 
