--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
-	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-node": "^4.0.1",
 		"lucide-svelte": "^0.330.0",
 		"nodemailer": "^6.9.14"
-	}
+	},
+	"type": "module",
+	"packageManager": "yarn@4.1.1"
 }
